--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: on-failure
     ports:
       - "5433:5433"
-  app:
+  backend:
     build: .
     restart: always
     depends_on:
