--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,32 @@
-version: "3.7"
 services:
   db:
     image: postgres:13-alpine
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    restart: on-failure
-    ports:
-      - "5433:5433"
-  backend:
-    build: .
     restart: always
+    container_name: backend-db
+    platform: linux/amd64
+    volumes:
+      - pg-volume:/var/lib/postgresql/data
+    env_file:
+      - postgres.env
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      interval: 5s
+  ktor:
+    build: .
+    platform: linux/amd64
+    container_name: backend-ktor
+    restart: always
+    ports:
+      - "8080:8080"
+    env_file:
+      - postgres.env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 
 
 volumes:
-  pgdata:
+  pg-volume: {}
