--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     env_file:
       - postgres.env
     ports:
-      - "5432:5432"
+      - "5433:5433"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB -d $$POSTGRES_PASSWORD" ]
       interval: 5s
   ktor:
     build: .
@@ -19,7 +19,7 @@ services:
     container_name: backend-ktor
     restart: always
     ports:
-      - "8080:8080"
+      - "8090:8090"
     env_file:
       - postgres.env
     depends_on:
