--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     restart: always
     container_name: backend-db
     platform: linux/amd64
-    volumes:
-      - pg-volume:/var/lib/postgresql/data
     env_file:
       - postgres.env
+    volumes:
+      - pg-volume:/var/lib/postgresql/data
     ports:
-      - "5433:5433"
+      - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB -d $$POSTGRES_PASSWORD" ]
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
       interval: 5s
   ktor:
     build: .
@@ -19,7 +19,7 @@ services:
     container_name: backend-ktor
     restart: always
     ports:
-      - "8090:8090"
+      - "8080:8080"
     env_file:
       - postgres.env
     depends_on:
