--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,17 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      test: [ "CMD-SHELL", "pg_isready -U $$DB_USER -d $$DB_NAME" ]
       interval: 5s
   ktor:
     build: .
     platform: linux/amd64
     container_name: backend-ktor
     restart: always
-    ports:
-      - "8090:8090"
     env_file:
       - postgres.env
+    ports:
+      - "8090:8090"
     depends_on:
       db:
         condition: service_healthy
