--- a/postgres.env
+++ b/postgres.env
@@ -1,3 +1,3 @@
-POSTGRES_DB={backend_db}
-POSTGRES_USER={postgres}
-POSTGRES_PASSWORD={DatabasePassword}
+DB_NAME={backend_db}
+DB_USER={postgres}
+DB_PASSWORD={DatabasePassword}
