--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     restart: always
     container_name: backend-db
     platform: linux/amd64
+    user: postgres
     env_file:
       - postgres.env
     volumes:
