--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - postgres.env
     volumes:
-      - pg-volume:/var/lib/postgresql/data
+      - volume_name:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
@@ -30,4 +30,5 @@ services:
 
 
 volumes:
-  pg-volume: {}
+  volume_name:
+    name: volume_name
